libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/let-argument-not-path.jsonc
//@ run: fail
//@ description: The binding name must be a path expression.
[
  "::kernel::special_form::let",
  { "#literal": true },
  //~^ ERROR Replace this expression with a simple identifier
  { "#literal": true },
  ["+", "x", "x"]
]
